[package]
name = "todo_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
eframe = "0.32.0"
egui = "0.27"
egui_extras = { version = "0.32.0", features = ["chrono"] }



[profile.dev]
opt-level = 1
debug = true
overflow-checks = true

[profile.release]
opt-level = "z"
lto = true
debug = false
codegen-units = 1
panic = "abort"
